<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure_logoff"
        android:textSize="@dimen/font_text_big"
        android:textColor="@color/colorFont"
        android:gravity="center"
        android:layout_marginTop="@dimen/alert_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure_logoff_hint"
        android:textSize="@dimen/font_text_big"
        android:textColor="@color/colorFont"
        android:gravity="center"
        android:layout_marginTop="@dimen/big_interval"
        android:layout_marginBottom="@dimen/alert_margin"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_big_btn"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/font_text_big"
            android:textColor="@color/colorAccent"
            android:background="@color/colorBack"/>

        <ImageView
            android:layout_width="@dimen/height_line"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_big_btn"
            android:layout_weight="1"
            android:text="@string/sure"
            android:textSize="@dimen/font_text_big"
            android:textColor="@color/colorAccent"
            android:background="@color/colorBack"/>

    </LinearLayout>

</LinearLayout>