<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ForgetActivity"
    android:background="@color/colorBack"
    android:layout_marginTop="@dimen/range_app_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorBack"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_big_icon"
                android:layout_height="@dimen/size_big_icon"
                android:layout_gravity="center"
                android:src="@mipmap/book" />

            <TextView
                android:id="@+id/app_title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/font_app_title"
                android:layout_gravity="center"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:src="@mipmap/left"
            android:layout_marginTop="@dimen/big_interval"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/range_welcome_back"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_title"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/font_welcome_title"
                />

            <TextView
                android:id="@+id/forget_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_hint"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/font_big"
                android:paddingStart="@dimen/big_interval"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin">
            <!--邮箱-->
            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="@dimen/big_interval">

                <TextView
                    android:id="@+id/email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textColor="@color/colorFont"
                    android:textSize="@dimen/font_welcome" />

                <com.example.notepad.View.ClearEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/big_interval"
                    android:background="@null"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/font_welcome_input" />

            </LinearLayout>

            <Button
                android:id="@+id/send_email_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_btn"
                android:layout_below="@id/email"
                android:layout_marginTop="@dimen/big_interval"
                android:background="@drawable/welcome_btn"
                android:stateListAnimator="@null"
                android:text="@string/send_email"
                android:textColor="@color/colorBack"
                android:textSize="@dimen/font_welcome" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>